# mujoco-parameter-identification

./: .gitignore  .pylintrc  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup_local_env.sh
.github/workflows/: ci.yml
Project/: Experiment_long_data.ods  Experiment_long_data_0_594.csv  Experiment_long_data_0_594.ods  Experiment_long_data_120_500.csv  Experiment_short_data.csv  Experiment_short_data_120_300.ods  Long_new.trk  Short_new.trk
data/Project/: Experiment_long_data_120_360.csv  Experiment_long_data_120_360.ods  Experiment_short_data.ods  Experiment_short_data_120_300.csv
media/: README.md
notebooks/: Parameter_Identification.ipynb
results/: .gitkeep
src/: __init__.py  gif_generator.py  parameter_identification.py
tests/: test_gif_generator.py  test_parameter_identification.py
