[metadata]
name = mujoco-parameter-identification
version = 1.0.0
author = Pranay Palem
description = Parameter identification for material properties using MuJoCo simulations
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.21.0
    pandas>=1.3.0
    matplotlib>=3.4.0
    scipy>=1.7.0
    mujoco>=2.3.0
    mediapy>=1.1.0
    jupyter>=1.0.0

[options.packages.find]
where = src

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist

[mypy]
python_version = 3.9
warn_return_any = False
warn_unused_configs = False
disallow_untyped_defs = False
ignore_missing_imports = True

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*